# SmmBackdootApi

./: .gitignore  Makefile  README.md
Ring0/: Makefile
Ring0/api/: Makefile
Ring0/api/inc/: api.hpp
Ring0/api/src/: api.cc  main.cc
Ring0/module/: Makefile
Ring0/module/src/: api.c  ioctl.h
Ring3/: CMakeLists.txt  Makefile
Ring3/inc/: api.hpp  cli.hpp
Ring3/src/: api.cc  cli.cc  main.cc
uefi-test/: CMakeLists.txt
uefi-test/src/: main.cc
